1.7.12: Add constraints to packets for Room Controller, refactor mixins, refactor ticking API