@@ -1,5 +1,6 @@
 package com.techteam.fabric.bettermod.impl;
 
+import com.google.common.collect.ImmutableSet;
 import com.techteam.fabric.bettermod.api.block.BetterBlock;
 import com.techteam.fabric.bettermod.api.block.entity.BetterBlockEntity;
 import com.techteam.fabric.bettermod.api.block.entity.loadable.IClientLoadableBlockEntity;
@@ -14,7 +15,6 @@ import com.techteam.fabric.bettermod.impl.client.gui.HopperScreenHandler;
 import com.techteam.fabric.bettermod.impl.client.gui.RoomControllerScreenHandler;
 import com.techteam.fabric.bettermod.impl.network.BoxUpdatePayload;
 import io.github.cottonmc.cotton.gui.SyncedGuiDescription;
-import io.netty.buffer.ByteBuf;
 import me.shedaniel.autoconfig.AutoConfig;
 import me.shedaniel.autoconfig.serializer.GsonConfigSerializer;
 import net.fabricmc.api.ClientModInitializer;
@@ -28,9 +28,8 @@ import net.fabricmc.fabric.api.client.rendering.v1.ColorProviderRegistry;
 import net.fabricmc.fabric.api.event.lifecycle.v1.ServerBlockEntityEvents;
 import net.fabricmc.fabric.api.itemgroup.v1.FabricItemGroup;
 import net.fabricmc.fabric.api.screenhandler.v1.ExtendedScreenHandlerType;
-import net.fabricmc.fabric.api.transfer.v1.item.ItemStorage;
+import net.fabricmc.fabric.impl.registry.sync.trackers.vanilla.BlockItemTracker;
 import net.minecraft.block.AbstractBlock;
-import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.block.entity.BlockEntityType;
@@ -43,7 +42,6 @@ import net.minecraft.item.ItemGroup;
 import net.minecraft.item.ItemStack;
 import net.minecraft.network.RegistryByteBuf;
 import net.minecraft.network.codec.PacketCodec;
-import net.minecraft.network.codec.PacketCodecs;
 import net.minecraft.registry.Registries;
 import net.minecraft.registry.Registry;
 import net.minecraft.resource.featuretoggle.FeatureFlags;
@@ -53,16 +51,13 @@ import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.jetbrains.annotations.Contract;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Set;
 
 
 public class BetterMod implements ModInitializer, ClientModInitializer {
 	public static final Logger LOGGER = LogManager.getLogger();
-	public static final PacketCodec<ByteBuf, BlockState> BLOCK_STATE = PacketCodecs.entryOf(Block.STATE_IDS);
 	public static BetterModConfig CONFIG;
 	public static BlockEntityType<BetterBookshelfBlockEntity> BOOKSHELF_BLOCK_ENTITY_TYPE;
 	public static ScreenHandlerType<BetterBookshelfScreenHandler> BOOKSHELF_SCREEN_HANDLER_TYPE;
@@ -79,21 +74,11 @@ public class BetterMod implements ModInitializer, ClientModInitializer {
 	public static Collection<ItemStack> ITEMS = new ArrayList<>();
 
 	public static final ItemGroup ITEM_GROUP = FabricItemGroup.builder()
-	                                                          .icon(() -> new ItemStack(ROOM_CONTROLLER_BLOCK.asItem()))
+	                                                          .icon(() -> ROOM_CONTROLLER_BLOCK.asItem().getDefaultStack())
 	                                                          .displayName(Text.translatable("bettermod.item_group"))
 	                                                          .entries((context, entries) -> entries.addAll(ITEMS))
 	                                                          .build();
-	public static PacketCodec<RegistryByteBuf, BoxUpdatePayload.Vec3b> VEC3B = PacketCodec.tuple(
-			PacketCodecs.BYTE,
-			BoxUpdatePayload.Vec3b::x,
-			PacketCodecs.BYTE,
-			BoxUpdatePayload.Vec3b::y,
-			PacketCodecs.BYTE,
-			BoxUpdatePayload.Vec3b::z,
-			BoxUpdatePayload.Vec3b::new
-	);
 
-	@Contract("_, _ -> param2")
 	public static <E extends BetterBlockEntity> BetterBlock<E> registerBlock(Identifier ID, BetterBlock<E> block) {
 		Registry.register(Registries.BLOCK, ID, block);
 		final BlockItem blockItem = Registry.register(Registries.ITEM, ID, new BlockItem(block, new Item.Settings()));
@@ -102,33 +87,20 @@ public class BetterMod implements ModInitializer, ClientModInitializer {
 	}
 
 	public static <E extends BetterBlockEntity> BlockEntityType<E> registerBlockEntityType(Identifier ID, BetterBlock<E> block) {
-		BlockEntityType<E> blockEntityType = Registry.register(
-				Registries.BLOCK_ENTITY_TYPE,
-				ID,
-				new BlockEntityType<>(
-						block::createBlockEntity,
-						Set.of(block),
-						null
-				)
+		return Registry.register(Registries.BLOCK_ENTITY_TYPE,
+		                         ID,
+		                         new BlockEntityType<>(block::createBlockEntity, ImmutableSet.of(block), null)
 		);
-		ItemStorage.SIDED.registerForBlockEntity(
-				(betterBlockEntity, direction) -> betterBlockEntity.SELF,
-				blockEntityType
-		);
-		return blockEntityType;
 	}
 
-	@Contract("_, _, _ -> !null")
 	public static <T extends ScreenHandler, D> ScreenHandlerType<T> registerExtendedScreenHandler(Identifier ID, ExtendedScreenHandlerType.ExtendedFactory<T, D> factory, PacketCodec<? super RegistryByteBuf, D> codec) {
 		return Registry.register(Registries.SCREEN_HANDLER, ID, new ExtendedScreenHandlerType<>(factory, codec));
 	}
 
-	@Contract("_, _ -> !null")
 	public static <T extends ScreenHandler> ScreenHandlerType<T> registerScreenHandler(Identifier ID, ScreenHandlerType.Factory<T> factory) {
-		return Registry.register(
-				Registries.SCREEN_HANDLER,
-				ID,
-				new ScreenHandlerType<>(factory, FeatureFlags.VANILLA_FEATURES)
+		return Registry.register(Registries.SCREEN_HANDLER,
+		                         ID,
+		                         new ScreenHandlerType<>(factory, FeatureFlags.VANILLA_FEATURES)
 		);
 	}
 
@@ -145,7 +117,7 @@ public class BetterMod implements ModInitializer, ClientModInitializer {
 		Registry.register(Registries.ITEM_GROUP, Identifier.of("bettermod", "item_group"), ITEM_GROUP);
 
 		ServerBlockEntityEvents.BLOCK_ENTITY_LOAD.register(IServerLoadableBlockEntity::onLoad);
-		ServerBlockEntityEvents.BLOCK_ENTITY_UNLOAD.register(IServerLoadableBlockEntity::onUnLoad);
+		ServerBlockEntityEvents.BLOCK_ENTITY_UNLOAD.register(IServerLoadableBlockEntity::onUnload);
 
 		BoxUpdatePayload.register();
 
@@ -156,22 +128,18 @@ public class BetterMod implements ModInitializer, ClientModInitializer {
 			LOGGER.error("BetterBookshelves was not successful! This is a bug!");
 		}
 
-		ROOM_CONTROLLER_BLOCK = registerBlock(
-				RoomControllerBlock.ID,
-				new RoomControllerBlock(AbstractBlock.Settings.copy(Blocks.GLASS)
-				                                              .dynamicBounds())
+		ROOM_CONTROLLER_BLOCK = registerBlock(RoomControllerBlock.ID,
+		                                      new RoomControllerBlock(AbstractBlock.Settings.copy(Blocks.GLASS)
+		                                                                                    .dynamicBounds())
 		);
-		BIT_HOPPER_BLOCK = registerBlock(
-				BitHopperBlock.ID,
-				new BitHopperBlock(AbstractBlock.Settings.copy(Blocks.HOPPER))
+		BIT_HOPPER_BLOCK = registerBlock(BitHopperBlock.ID,
+		                                 new BitHopperBlock(AbstractBlock.Settings.copy(Blocks.HOPPER))
 		);
-		STICK_HOPPER_BLOCK = registerBlock(
-				StickHopperBlock.ID,
-				new StickHopperBlock(AbstractBlock.Settings.copy(Blocks.HOPPER))
+		STICK_HOPPER_BLOCK = registerBlock(StickHopperBlock.ID,
+		                                   new StickHopperBlock(AbstractBlock.Settings.copy(Blocks.HOPPER))
 		);
-		PULL_HOPPER_BLOCK = registerBlock(
-				PullHopperBlock.ID,
-				new PullHopperBlock(AbstractBlock.Settings.copy(Blocks.HOPPER))
+		PULL_HOPPER_BLOCK = registerBlock(PullHopperBlock.ID,
+		                                  new PullHopperBlock(AbstractBlock.Settings.copy(Blocks.HOPPER))
 		);
 
 		ROOM_CONTROLLER_BLOCK_ENTITY_TYPE = registerBlockEntityType(RoomControllerBlock.ID, ROOM_CONTROLLER_BLOCK);
@@ -179,14 +147,12 @@ public class BetterMod implements ModInitializer, ClientModInitializer {
 		STICK_HOPPER_BLOCK_ENTITY_TYPE = registerBlockEntityType(StickHopperBlockEntity.ID, STICK_HOPPER_BLOCK);
 		PULL_HOPPER_BLOCK_ENTITY_TYPE = registerBlockEntityType(PullHopperBlockEntity.ID, PULL_HOPPER_BLOCK);
 
-		BOOKSHELF_SCREEN_HANDLER_TYPE = registerScreenHandler(
-				BetterBookshelfBlock.ID,
-				BetterBookshelfScreenHandler::new
+		BOOKSHELF_SCREEN_HANDLER_TYPE = registerScreenHandler(BetterBookshelfBlock.ID,
+		                                                      BetterBookshelfScreenHandler::new
 		);
-		ROOM_CONTROLLER_SCREEN_HANDLER_TYPE = registerExtendedScreenHandler(
-				RoomControllerBlock.ID,
-				RoomControllerScreenHandler::new,
-				BoxUpdatePayload.CODEC
+		ROOM_CONTROLLER_SCREEN_HANDLER_TYPE = registerExtendedScreenHandler(RoomControllerBlock.ID,
+		                                                                    RoomControllerScreenHandler::new,
+		                                                                    BoxUpdatePayload.CODEC
 		);
 		HOPPER_SCREEN_HANDLER_TYPE = registerScreenHandler(PullHopperBlock.ID, HopperScreenHandler::new);
 	}
@@ -195,24 +161,24 @@ public class BetterMod implements ModInitializer, ClientModInitializer {
 	@Environment(EnvType.CLIENT)
 	public void onInitializeClient() {
 		ColorProviderRegistry.BLOCK.register((state, view, pos, tintIndex) -> {
-			if (view != null) {
-				Object attachedData = view.getBlockEntityRenderData(pos);
-				if (attachedData instanceof BlockState mimicState) {
-					if (!mimicState.isAir()) {
-						var deferred_provider = ColorProviderRegistry.BLOCK.get(mimicState.getBlock());
-						if (deferred_provider != null) {
-							return deferred_provider.getColor(mimicState, view, pos, tintIndex);
-						}
+			if (view != null && pos != null) {
+				if (view.getBlockEntityRenderData(pos) instanceof BlockState mimicState) {
+					var deferred_provider = ColorProviderRegistry.BLOCK.get(mimicState.getBlock());
+					if (deferred_provider != null) {
+						return deferred_provider.getColor(mimicState, view, pos, tintIndex);
 					}
 				}
 			}
 			return 0xFFFFFF;
 		}, ROOM_CONTROLLER_BLOCK);
+
 		BoxUpdatePayload.registerClient();
 
 		ClientBlockEntityEvents.BLOCK_ENTITY_LOAD.register(IClientLoadableBlockEntity::onLoad);
 		ClientBlockEntityEvents.BLOCK_ENTITY_UNLOAD.register(IClientLoadableBlockEntity::onUnload);
+
 		BlockEntityRendererFactories.register(ROOM_CONTROLLER_BLOCK_ENTITY_TYPE, RoomControllerEntityRenderer::new);
+
 		BlockRenderLayerMap.INSTANCE.putBlock(ROOM_CONTROLLER_BLOCK, RenderLayer.getCutoutMipped());
 		registerScreen(BOOKSHELF_SCREEN_HANDLER_TYPE);
 		registerScreen(HOPPER_SCREEN_HANDLER_TYPE);
